@@ -2852,8 +2852,8 @@ vscpws_stateButton.prototype.setOffTransmitZone = function(index,zone,subzone)
 
 vscpws_stateButton.prototype.setTransmitBothZone = function(index,zone,subzone)
 {
-	setOffTransmitZone(index,zone,subzone);
-	setOnTransmitZone(index,zone,subzone);
+	this.setOffTransmitZone(index,zone,subzone);
+	this.setOnTransmitZone(index,zone,subzone);
 }
 
 //-----------------------------------------------------------------------------
@@ -2934,8 +2934,8 @@ vscpws_stateButton.prototype.setOffReceiveZone = function(index,zone,subzone)
 
 vscpws_stateButton.prototype.setReceiveBothZone = function(index,zone,subzone)
 {
-	setOffReceiveZone(index,zone,subzone);
-	setOnReceiveZone(index,zone,subzone);
+	this.setOffReceiveZone(index,zone,subzone);
+	this.setOnReceiveZone(index,zone,subzone);
 }
 
 //-----------------------------------------------------------------------------
