@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8">
@@ -98,6 +98,8 @@ see the events sent.
                             "../images/Karnvillan_plan1_800.jpg",  
                             0, 0, 800, 670 );
     
+    // btn1 turn itself on or off but also monitor the state of the variable
+    // statebutton1 and change state accordingly
 	var btn1 = new vscpws_stateButton( vscp_setting_user,           // user   from settings.js
                                         vscp_setting_passwordhash,  // password   from settings.js
                                         vscp_setting_url,           // url 
@@ -106,25 +108,37 @@ see the events sent.
                                         80 );                       // Button type
     btn1.setMonitorVariable("stateButton1", 1000);                  // Update and monitor
                                                                     // this variable also
+    // Set zone info
+	btn1.setTransmitBothZone( 0,1,10 );
+	btn1.setReceiveBothZone( -1,1,10 );																	
     
+	// btn1 need a reply on the form 
+	// CLASS1.INFORMATION, Type=On Zone=1, Subzone=11
+    // to turn on and 
+    // CLASS1.INFORMATION, Type=Off Zone=1, Subzone=11
+    // to turn off
     var btn2 = new vscpws_stateButton( vscp_setting_user,           // user   from settings.js
                                         vscp_setting_passwordhash,  // password   from settings.js
                                         vscp_setting_url,           // url
                                         "buttonStudy",              // canvas for button
                                         false,                      // No local state change
                                         90);                        // Button type
-										
-	btn2.setOnTransmitZone( 2,0,10 );
-	btn2.setOffTransmitZone( 2,0,10 );
-	btn2.setOnReceiveZone( 2,0,10 );
-	btn2.setOffReceiveZone( 2,0,10 );									
-                                          
+	// Set zone info									
+	btn2.setTransmitBothZone( 0,1,11 );
+	btn2.setReceiveBothZone( -1,1,11 );									
+                                      
+    // btn1 need a reply on the form 
+    // CLASS1.INFORMATION, Type=On Zone=1, Subzone=12
+    // to turn on and 
+    // CLASS1.INFORMATION, Type=Off Zone=1, Subzone=12
+    // to turn off
     var btn3 = new vscpws_stateButton( vscp_setting_user,           // user   from settings.js
                                         vscp_setting_passwordhash,  // password   from settings.js
                                         vscp_setting_url,           // url
                                         "buttonLivingroom1" );      // canvas
-	
-	btn3.setOnTransmitZone( 2,0,11 );
+	// Set zone info
+	btn3.setTransmitBothZone( 0,1,12 );
+	btn3.setReceiveBothZone( -1,1,12 );
 </script>
 
 </body>
