@@ -1,2 +1,3 @@
 
+2015-04-08 - AKHE  Added setTransmitBothZone and setReceiveBothZone for statebutton
 2013-09-18 - AKHE  Release 0.0.1
